# spectral-packet

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: api.md  architecture.md  differentiable-physics.md  getting-started.md  inverse-and-uq.md  mcp-capabilities.md  mcp-operations.md  mcp-usage-guide.md  mcp.md  platforms.md  reduced-models.md  release-readiness-audit.md  vertical-workflows.md  workflows.md
docs/internal/: adoption-inevitability-audit-2026-04.md  advanced-physics-review-2026-04.md  duplication-audit-2026-04.md  engine-library-rebuild-audit-2026-04.md  final-predictive-hardening-audit-2026-04.md  mcp-hardening-audit-2026-04.md  mcp-resilience-audit-2026-04.md  originality-depth-standard.md  product-convergence-audit.md  product-inevitability-audit-2026-04.md  product-spine-audit.md  product-unification-audit.md  product-validation-audit.md  public-credibility-audit-2026-04.md  public-credibility-standard.md  public-mcp-domain-check-2026-04-05.md  release-candidate-audit.md  release-gate-audit-2026-04.md  release-gate-validation-matrix.md  system-convergence-audit-2026-04.md  tree-model-pr-draft-2026-04.md
docs/legacy/: README.md
examples/: README.md  _reference_case.py  api_client_demo.py  api_workflow.py  core_engine_workflow.py  csv_profile_workflow.py  experimental_transport_analysis.py  forward_reference.py  generate_report_figures.py  inverse_physics_workflow.py  inverse_reconstruction.py  ml_backend_workflow.py  modal_surrogate_workflow.py  packet_to_spectral.py  profile_table_workflow.py  python_workflow.py  reduced_model_workflow.py  tunneling_experiment.py
examples/data/: synthetic_profiles.csv  synthetic_profiles.json  synthetic_profiles.tsv
examples/experimental/: README.md  tensorflow_evaluation_workflow.py  tf_regression_benchmark.py
examples/reference/: README.md  forward_reference.py  generate_report_figures.py  inverse_reconstruction.py  packet_to_spectral.py  reference_case.py
scripts/: deploy_mcp_docker.sh  mcp_stress_test.py
src/spectral_packet_engine/: __init__.py  __main__.py  api.py  artifacts.py  basis.py  benchmark_registry.py  berry_phase.py  chebyshev.py  cli.py  config.py  convergence.py  core.py  data.py  database.py  datasets.py  density_matrix.py  diagnostics.py  differentiable_physics.py  domain.py  dynamics.py  eigensolver.py  energy.py  greens_function.py  inference.py  interfaces.py  load_spectral.py  many_body.py  mcp.py  mcp_deployment.py  mcp_probe.py  mcp_runtime.py  mcp_security.py  ml.py  momentum.py  observables.py  open_systems.py  open_transport.py  operator_algebra.py  (+45 more)
tests/: test_artifacts.py  test_benchmark_registry.py  test_chebyshev.py  test_cli.py  test_core.py  test_database.py  test_density_matrix.py  test_differentiable_physics.py  test_examples.py  test_inference.py  test_interfaces.py  test_many_body.py  test_mcp_ops.py  test_mcp_security.py  test_ml.py  test_open_systems.py  test_physics_contracts.py  test_pipelines.py  test_profiles.py  test_public_surface.py  test_qubit_mapping.py  test_real_data.py  test_reduced_models.py  test_release_gate.py  test_release_metadata.py  test_repo_hygiene.py  test_runtime.py  test_service_status.py  test_simulation.py  test_sparse_eigensolver.py  test_spectral_dataset.py  test_spectral_physics.py  test_table_io.py  test_tabular.py  test_tensor_product.py  test_tf_surrogate.py  test_tree_models.py  test_urban_climate.py  test_vertical_workflows.py  test_weather.py  (+2 more)
